Switch script to Java 14 and add records :)